--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.2",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.12.0",
+    "@types/react-dom": "16.8.3",
     "node-sass": "^4.11.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8",
+    "typescript": "3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,8 +28,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.3.3333"
+    "@types/react": "^16.8.10"
   }
 }
