--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -28,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react": "^16.8.10"
+    "@types/react": "^16.8.10",
+    "gh-pages": "^2.0.1"
   }
 }
