--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
   },
+  "homepage" : "https://github.com/JaredPotter/g6-market-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
