--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
   },
-  "homepage" : "https://github.com/JaredPotter/g6-market-app",
+  "homepage" : "https://jaredpotter.github.io/g6-market-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
+    "buildAndDeploy": "npm run build && npm run deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
